new transitions completely working!

--- a/tests/index.html
+++ b/tests/index.html
@@ -55,6 +55,12 @@
 
 <body>
 
+	<ul id="nav">
+		<li data-to="first">1st</li>
+		<li data-to="second">2nd</li>
+		<li data-to="third">3rd</li>
+	</ul>
+
 	<ul id="transition-list" class="transition-list">
 		<li id="first" >1</li>
 		<li id="second" >2</li>
